<resources>
    <string name="app_name">eDriveBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="driving">Driving</string>
    <string name="no">No</string>
    <string name="still_you_are_drive">Still you are driving or not kindly update your status</string>
    <string name="spark_eld">eDriveBook</string>
    <string name="enter_email_for_otp">Enter your email id to reset your password</string>
    <string name="enter_email_heading_for_otp">Enter your Email Id</string>
    <string name="email_id_hint">Email Id</string>
    <string name="driver_id">Driver ID</string>
    <string name="password">Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="forgot_password_">Forgot password</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_the_registered_email_and_we_will_send_you_an_otp_to_reset_your_password">Enter the registered email id and we will send you an OTP to reset your password.</string>
    <string name="we_have_sent_otp_on_your_email_id">We send you a code to verify your email id and reset your password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="your_name">Your name</string>
    <string name="do_you_want_to_exit_this_app">Are you sure you want to exit from app?</string>
    <string name="faqs">FAQs</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="settings">Settings</string>
    <string name="you_are_already_in_this_mode">You are already in this mode</string>
    <integer name="btnPlusView">1</integer>
</resources>