<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/reset_password"
        android:textColor="@color/primaryColor"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtResetPasswordDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:text="@string/we_have_sent_otp_on_your_email_id"
        android:textColor="@color/primaryColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardEnterOTP"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResetPasswordDesc">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_verify_otp"
                android:tintMode="src_in"
                app:tint="@color/primaryColor" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:backgroundTint="#fff"
                android:drawablePadding="7dp"
                android:fontFamily="sans-serif-thin"
                android:hint="@string/enter_otp"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="6"
                android:paddingHorizontal="15dp"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="#878686"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardNewPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toStartOf="@+id/cardEnterOTP"
        app:layout_constraintEnd_toEndOf="@+id/cardEnterOTP"
        app:layout_constraintTop_toBottomOf="@+id/cardEnterOTP">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:src="@drawable/lockicon"
                android:tintMode="src_in"
                app:tint="#0091EA" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#fff"
                android:hint="@string/enter_new_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingHorizontal="15dp"
                android:textColor="#000"
                android:textColorHint="#878686"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toStartOf="@+id/cardEnterOTP"
        app:layout_constraintEnd_toEndOf="@+id/cardEnterOTP"
        app:layout_constraintTop_toBottomOf="@+id/cardNewPassword">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:src="@drawable/lockicon"
                android:tintMode="src_in"
                app:tint="#0091EA" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#fff"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingHorizontal="15dp"
                android:textColor="#000"
                android:textColorHint="#878686"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="monospace"
        android:text="@string/reset_password"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/cardConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/cardConfirmPassword"
        app:layout_constraintEnd_toEndOf="@+id/cardConfirmPassword"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
