<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:backgroundTint="#000"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:backgroundTint="#fff"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:cardCornerRadius="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/logoputtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/still_you_are_drive"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:textColor="#000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="20"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                >
                <androidx.cardview.widget.CardView
                    android:id="@+id/no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    app:cardBackgroundColor="#fdad03"
                    app:cardCornerRadius="15dp"
                    >
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        app:cardBackgroundColor="#fff"
                        android:layout_margin="1dp"
                        app:cardCornerRadius="15dp"
                        android:layout_height="match_parent">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="9dp"
                                android:layout_marginBottom="9dp"
                                android:text="@string/no"
                                android:textColor="#fdad03"
                                android:textStyle="bold" />

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/drive"
                    android:layout_width="0dp"
                    android:layout_marginStart="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    app:cardBackgroundColor="#ED663B"
                    app:cardCornerRadius="15dp"
                    >
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        app:cardBackgroundColor="#fff"
                        android:layout_margin="1dp"
                        app:cardCornerRadius="15dp"
                        android:layout_height="match_parent">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="9dp"
                                android:layout_marginBottom="9dp"
                                android:text="@string/driving"
                                android:textColor="#ED663B"
                                android:textStyle="bold" />

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>


                </androidx.cardview.widget.CardView>



            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.cardview.widget.CardView>